File main_cnn is running but is no good at classifying

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -193,23 +193,253 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/.local/lib/python3.6/site-packages/ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/home/martin/.local/lib/python3.6/site-packages/ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  if __name__ == '__main__':\n",
+      "/home/martin/.local/lib/python3.6/site-packages/pandas/core/indexing.py:670: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  iloc._setitem_with_indexer(indexer, value)\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unix</th>\n",
+       "      <th>open_x</th>\n",
+       "      <th>high_x</th>\n",
+       "      <th>low_x</th>\n",
+       "      <th>close_x</th>\n",
+       "      <th>Volume LINK</th>\n",
+       "      <th>Volume USDT_x</th>\n",
+       "      <th>tradecount_x</th>\n",
+       "      <th>open_y</th>\n",
+       "      <th>high_y</th>\n",
+       "      <th>low_y</th>\n",
+       "      <th>close_y</th>\n",
+       "      <th>Volume BTC</th>\n",
+       "      <th>Volume USDT_y</th>\n",
+       "      <th>tradecount_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-05-02 00:00:00</td>\n",
+       "      <td>41.249</td>\n",
+       "      <td>41.395</td>\n",
+       "      <td>41.246</td>\n",
+       "      <td>41.366</td>\n",
+       "      <td>38718.607</td>\n",
+       "      <td>1.600391e+06</td>\n",
+       "      <td>4180</td>\n",
+       "      <td>57797.35</td>\n",
+       "      <td>57830.54</td>\n",
+       "      <td>57709.95</td>\n",
+       "      <td>57742.40</td>\n",
+       "      <td>78.095757</td>\n",
+       "      <td>4.511635e+06</td>\n",
+       "      <td>3882.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-05-01 23:00:00</td>\n",
+       "      <td>40.820</td>\n",
+       "      <td>41.270</td>\n",
+       "      <td>40.786</td>\n",
+       "      <td>41.257</td>\n",
+       "      <td>223975.373</td>\n",
+       "      <td>9.196178e+06</td>\n",
+       "      <td>48271</td>\n",
+       "      <td>57660.31</td>\n",
+       "      <td>57939.00</td>\n",
+       "      <td>57580.70</td>\n",
+       "      <td>57800.37</td>\n",
+       "      <td>1209.306091</td>\n",
+       "      <td>6.986825e+07</td>\n",
+       "      <td>43464.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-05-01 22:00:00</td>\n",
+       "      <td>40.371</td>\n",
+       "      <td>40.879</td>\n",
+       "      <td>40.270</td>\n",
+       "      <td>40.809</td>\n",
+       "      <td>200844.385</td>\n",
+       "      <td>8.150984e+06</td>\n",
+       "      <td>17030</td>\n",
+       "      <td>57451.57</td>\n",
+       "      <td>57716.27</td>\n",
+       "      <td>57243.65</td>\n",
+       "      <td>57657.75</td>\n",
+       "      <td>1203.540057</td>\n",
+       "      <td>6.925197e+07</td>\n",
+       "      <td>44789.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-05-01 21:00:00</td>\n",
+       "      <td>41.000</td>\n",
+       "      <td>41.200</td>\n",
+       "      <td>40.275</td>\n",
+       "      <td>40.354</td>\n",
+       "      <td>225856.473</td>\n",
+       "      <td>9.206971e+06</td>\n",
+       "      <td>16072</td>\n",
+       "      <td>57680.00</td>\n",
+       "      <td>57690.00</td>\n",
+       "      <td>57372.01</td>\n",
+       "      <td>57451.58</td>\n",
+       "      <td>1247.752192</td>\n",
+       "      <td>7.182131e+07</td>\n",
+       "      <td>55646.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-05-01 20:00:00</td>\n",
+       "      <td>40.991</td>\n",
+       "      <td>41.111</td>\n",
+       "      <td>40.603</td>\n",
+       "      <td>40.999</td>\n",
+       "      <td>262228.369</td>\n",
+       "      <td>1.071395e+07</td>\n",
+       "      <td>15816</td>\n",
+       "      <td>57770.32</td>\n",
+       "      <td>57877.39</td>\n",
+       "      <td>57641.50</td>\n",
+       "      <td>57679.99</td>\n",
+       "      <td>1187.493497</td>\n",
+       "      <td>6.859204e+07</td>\n",
+       "      <td>45882.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'/content'"
+       "                  unix  open_x  high_x   low_x  close_x  Volume LINK  \\\n",
+       "0  2021-05-02 00:00:00  41.249  41.395  41.246   41.366    38718.607   \n",
+       "1  2021-05-01 23:00:00  40.820  41.270  40.786   41.257   223975.373   \n",
+       "2  2021-05-01 22:00:00  40.371  40.879  40.270   40.809   200844.385   \n",
+       "3  2021-05-01 21:00:00  41.000  41.200  40.275   40.354   225856.473   \n",
+       "4  2021-05-01 20:00:00  40.991  41.111  40.603   40.999   262228.369   \n",
+       "\n",
+       "   Volume USDT_x  tradecount_x    open_y    high_y     low_y   close_y  \\\n",
+       "0   1.600391e+06          4180  57797.35  57830.54  57709.95  57742.40   \n",
+       "1   9.196178e+06         48271  57660.31  57939.00  57580.70  57800.37   \n",
+       "2   8.150984e+06         17030  57451.57  57716.27  57243.65  57657.75   \n",
+       "3   9.206971e+06         16072  57680.00  57690.00  57372.01  57451.58   \n",
+       "4   1.071395e+07         15816  57770.32  57877.39  57641.50  57679.99   \n",
+       "\n",
+       "    Volume BTC  Volume USDT_y  tradecount_y  \n",
+       "0    78.095757   4.511635e+06        3882.0  \n",
+       "1  1209.306091   6.986825e+07       43464.0  \n",
+       "2  1203.540057   6.925197e+07       44789.0  \n",
+       "3  1247.752192   7.182131e+07       55646.0  \n",
+       "4  1187.493497   6.859204e+07       45882.0  "
       ]
      },
-     "execution_count": 3,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%pwd\n"
+    "\n",
+    "df_link = pd.read_csv(\"Binance_LINKUSDT_1h.csv\")\n",
+    "df_btc = pd.read_csv(\"Binance_BTCUSDT_1h.csv\")\n",
+    "\n",
+    "def preprocess_unix(df):\n",
+    "    for index in df.index:\n",
+    "        if df['unix'][index]>1000000000000:\n",
+    "            #getting rid of ms\n",
+    "            df['unix'][index] = df['unix'][index]/1000\n",
+    "        df['unix'][index] = datetime.utcfromtimestamp(df['unix'][index]).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "df_link = preprocess_unix(df_link)\n",
+    "df_link = df_link.drop(columns=[\"date\", \"symbol\"])\n",
+    "df_btc = preprocess_unix(df_btc)\n",
+    "\n",
+    "df_btc = df_btc.drop(columns=[\"date\", \"symbol\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = df_link.merge(df_btc, how='inner', on='unix')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6542, 15)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6542 entries, 0 to 6541\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   unix           6542 non-null   object \n",
+      " 1   open_x         6542 non-null   float64\n",
+      " 2   high_x         6542 non-null   float64\n",
+      " 3   low_x          6542 non-null   float64\n",
+      " 4   close_x        6542 non-null   float64\n",
+      " 5   Volume LINK    6542 non-null   float64\n",
+      " 6   Volume USDT_x  6542 non-null   float64\n",
+      " 7   tradecount_x   6542 non-null   int64  \n",
+      " 8   open_y         6542 non-null   float64\n",
+      " 9   high_y         6542 non-null   float64\n",
+      " 10  low_y          6542 non-null   float64\n",
+      " 11  close_y        6542 non-null   float64\n",
+      " 12  Volume BTC     6542 non-null   float64\n",
+      " 13  Volume USDT_y  6542 non-null   float64\n",
+      " 14  tradecount_y   6542 non-null   float64\n",
+      "dtypes: float64(13), int64(1), object(1)\n",
+      "memory usage: 766.8+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_base = df.drop_duplicates(subset=['unix'], ignore_index=True)\n",
+    "print(df_base.shape)\n",
+    "print(df_base.info())"
    ]
   },
   {
@@ -284,45 +514,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(32216, 10)\n",
+      "(32477, 10)\n",
       "                  unix                 date    symbol      open      high  \\\n",
-      "0  2021-04-21 00:00:00  2021-04-21 00:00:00  BTC/USDT  56425.00  56519.41   \n",
-      "1  2021-04-20 23:00:00  2021-04-20 23:00:00  BTC/USDT  56380.00  56573.54   \n",
-      "2  2021-04-20 22:00:00  2021-04-20 22:00:00  BTC/USDT  57020.76  57050.00   \n",
-      "3  2021-04-20 21:00:00  2021-04-20 21:00:00  BTC/USDT  56725.01  57020.77   \n",
-      "4  2021-04-20 20:00:00  2021-04-20 20:00:00  BTC/USDT  56572.44  57076.24   \n",
+      "0  2021-05-02 00:00:00  2021-05-02 00:00:00  BTC/USDT  57797.35  57830.54   \n",
+      "1  2021-05-01 23:00:00  2021-05-01 23:00:00  BTC/USDT  57660.31  57939.00   \n",
+      "2  2021-05-01 22:00:00  2021-05-01 22:00:00  BTC/USDT  57451.57  57716.27   \n",
+      "3  2021-05-01 21:00:00  2021-05-01 21:00:00  BTC/USDT  57680.00  57690.00   \n",
+      "4  2021-05-01 20:00:00  2021-05-01 20:00:00  BTC/USDT  57770.32  57877.39   \n",
       "\n",
       "        low     close   Volume BTC   Volume USDT  tradecount  \n",
-      "0  56420.64  56498.20   115.700389  6.535294e+06      4172.0  \n",
-      "1  56177.97  56425.00  1908.144983  1.076613e+08     57404.0  \n",
-      "2  56090.00  56380.00  2308.190909  1.306442e+08     70109.0  \n",
-      "3  56424.25  57020.76  2491.567737  1.412203e+08    128389.0  \n",
-      "4  56347.84  56725.00  3872.758905  2.199362e+08    101511.0  \n",
+      "0  57709.95  57742.40    78.095757  4.511635e+06      3882.0  \n",
+      "1  57580.70  57800.37  1209.306091  6.986825e+07     43464.0  \n",
+      "2  57243.65  57657.75  1203.540057  6.925197e+07     44789.0  \n",
+      "3  57372.01  57451.58  1247.752192  7.182131e+07     55646.0  \n",
+      "4  57641.50  57679.99  1187.493497  6.859204e+07     45882.0  \n",
       "                      unix              date    symbol      open      high  \\\n",
-      "32016  2017-08-25 11:00:00  2017-08-25 11-AM  BTC/USDT   4314.33   4361.28   \n",
-      "32017  2017-08-25 10:00:00  2017-08-25 10-AM  BTC/USDT   4344.56   4344.56   \n",
-      "32018  2017-08-25 09:00:00  2017-08-25 09-AM  BTC/USDT   4332.17   4352.00   \n",
-      "32019  2017-08-25 08:00:00  2017-08-25 08-AM  BTC/USDT   4329.00   4354.35   \n",
-      "32020  2017-08-25 07:00:00  2017-08-25 07-AM  BTC/USDT   4302.72   4335.00   \n",
+      "32277  2017-08-25 11:00:00  2017-08-25 11-AM  BTC/USDT   4314.33   4361.28   \n",
+      "32278  2017-08-25 10:00:00  2017-08-25 10-AM  BTC/USDT   4344.56   4344.56   \n",
+      "32279  2017-08-25 09:00:00  2017-08-25 09-AM  BTC/USDT   4332.17   4352.00   \n",
+      "32280  2017-08-25 08:00:00  2017-08-25 08-AM  BTC/USDT   4329.00   4354.35   \n",
+      "32281  2017-08-25 07:00:00  2017-08-25 07-AM  BTC/USDT   4302.72   4335.00   \n",
       "...                    ...               ...       ...       ...       ...   \n",
-      "32211  2017-08-17 08:00:00  2017-08-17 08-AM  BTC/USDT   4349.99   4377.85   \n",
-      "32212  2017-08-17 07:00:00  2017-08-17 07-AM  BTC/USDT   4324.35   4349.99   \n",
-      "32213  2017-08-17 06:00:00  2017-08-17 06-AM  BTC/USDT   4315.32   4345.45   \n",
-      "32214  2017-08-17 05:00:00  2017-08-17 05-AM  BTC/USDT   4308.83   4328.69   \n",
-      "32215  2017-08-17 04:00:00  2017-08-17 04-AM  BTC/USDT  16199.91  16199.91   \n",
+      "32472  2017-08-17 08:00:00  2017-08-17 08-AM  BTC/USDT   4349.99   4377.85   \n",
+      "32473  2017-08-17 07:00:00  2017-08-17 07-AM  BTC/USDT   4324.35   4349.99   \n",
+      "32474  2017-08-17 06:00:00  2017-08-17 06-AM  BTC/USDT   4315.32   4345.45   \n",
+      "32475  2017-08-17 05:00:00  2017-08-17 05-AM  BTC/USDT   4308.83   4328.69   \n",
+      "32476  2017-08-17 04:00:00  2017-08-17 04-AM  BTC/USDT  16199.91  16199.91   \n",
       "\n",
       "           low    close  Volume BTC  Volume USDT  tradecount  \n",
-      "32016  4313.00  4361.27     24.7800    107389.15         NaN  \n",
-      "32017  4298.74  4314.33     15.0100     64932.78         NaN  \n",
-      "32018  4332.17  4344.56     12.2100     52971.48         NaN  \n",
-      "32019  4316.54  4332.17     21.3600     92460.23         NaN  \n",
-      "32020  4300.00  4329.00     21.3200     92150.65         NaN  \n",
+      "32277  4313.00  4361.27     24.7800    107389.15         NaN  \n",
+      "32278  4298.74  4314.33     15.0100     64932.78         NaN  \n",
+      "32279  4332.17  4344.56     12.2100     52971.48         NaN  \n",
+      "32280  4316.54  4332.17     21.3600     92460.23         NaN  \n",
+      "32281  4300.00  4329.00     21.3200     92150.65         NaN  \n",
       "...        ...      ...         ...          ...         ...  \n",
-      "32211  4333.32  4360.69      0.9499      4139.70         NaN  \n",
-      "32212  4287.41  4349.99      4.4400     19241.06         NaN  \n",
-      "32213  4309.37  4324.35      7.2300     31282.31         NaN  \n",
-      "32214  4291.37  4315.32     23.2300    100304.82         NaN  \n",
-      "32215  4261.32  4308.83     44.5100    190952.85         NaN  \n",
+      "32472  4333.32  4360.69      0.9499      4139.70         NaN  \n",
+      "32473  4287.41  4349.99      4.4400     19241.06         NaN  \n",
+      "32474  4309.37  4324.35      7.2300     31282.31         NaN  \n",
+      "32475  4291.37  4315.32     23.2300    100304.82         NaN  \n",
+      "32476  4261.32  4308.83     44.5100    190952.85         NaN  \n",
       "\n",
       "[200 rows x 10 columns]\n"
      ]
